<resources>
    <string name="app_name">test2</string>
    <string name="media_url_mp3">gs://test2-3b507.appspot.com/learning/Financial planning.mp4</string>
    <string name="mutualfunds_info">
A Mutual Fund is a trust that collects money from investors who share a common financial goal, and invest the proceeds in different asset classes, as defined by the investment objective. Simply put, mutual fund is a financial intermediary, set up with an objective to professionally manage the money pooled from the investors at large. By pooling money together in a mutual fund, investors can enjoy economies of scale and can purchase stocks or bonds at a much lower trading costs compared to direct investing in capital markets. The other advantages are diversification, stock and bond selection by experts, low costs, convenience and flexibility. An investor in a mutual fund scheme receives units which are in accordance with the quantum of money invested by him. These units represent an investor’s proportionate ownership into the assets of a scheme and his liability in case of loss to the fund is limited to the extent of amount invested by him. The pooling of resources is the biggest strength for mutual funds. The relatively lower amounts required for investing into a mutual fund scheme enables small retail investors to enjoy the benefits of professional money management and lends access to different markets, which they otherwise may not be able to access. The investment experts who invest the pooled money on behalf of investors of the scheme are known as ‘Fund Managers’. These fund managers take the investment decisions pertaining to the selection of securities and the proportion of investments to be made into them. However, these decisions are governed by certain guidelines which are decided by the investment objective(s), investment pattern of the scheme and are subject to regulatory restrictions. It is this investment objective and investment pattern which also guides the investor in choosing the right fund for his investment purpose. Today, there are a variety of schemes offered by mutual funds in India, which cater to different categories of investors to suit different financial objectives e.g. some schemes may provide capital protection for the risk-averse investor, whereas some other schemes may provide for capital appreciation by investing in mid or small cap segment of the equity market for the more aggressive investor. The diversity in investment objectives and mandates has helped to classify and sub-classify the schemes accordingly. The broad classification can be done at the asset class levels. Thus we have Equity Funds, Bond Funds, Liquid Funds, Balanced Funds, Gilt Funds etc. These can be further sub-classified into different categories like mid cap funds, small cap funds, sector funds, index funds etc.</string>
    <string name="about_us">Financial Literacy ! Probably the most unaware form of literacy the India is facing.Today,Number of youngsters and even adults are unaware about the importance of investment and the ways to get started with.\n\n

Becoming financial independent is the dream of every single person living , but the fact is due to lack of financial knowledge , people don’t know the right ways to invest their money at right places and make them grow.\n\n

Our team spotted this thing and had an idea to help out solving this problem.We developed one platform here which will be providing right and efficient ways to invest their money by making them financially literate.We have tried to introduce ways like the share market too which are mostly though as risky by common people and is usually ignored.\n\n

We will be doing more and more and adding up more things with your support !</string>
    <string name="why_invest">Investments are important because in today’s world, just earning money is not enough. You work hard for the money you earn. But that may not be adequate for you to lead a comfortable lifestyle or fulfill your dreams and goals. To do that, you need to make your money work hard for you as well. This is why you invest. Money lying idle in your bank account is an opportunity lost. You should invest that money smartly to get good returns out of it.</string>
    <string name="typesof_invest">The Indian investor has a number of investment options to choose from. Some are traditional investments that have been used across generations, while some are relatively newer options that have become popular in recent years. Here are some popular investment options available in India.</string>
    <string name="stocks">Stocks, also known as company shares, are probably the most famous investment vehicle in India. When you buy a company’s stock, you buy ownership in that company that allows you to participate in the company’s growth. Stocks are offered by companies that are publicly listed on stock exchanges and can be bought by any investor. Stocks are ideal long-term investments. But investing in stocks should not be equated to trading in the stock market, which is a speculative activity.</string>
    <string name="mutual">Mutual funds have been around for the past few decades but they have gained popularity only in the last few years. These are investment vehicles that pool the money of many investors and invest it in a way to earn optimum returns. Different types of mutual funds invest in different securities. Equity mutual funds invest primarily in stocks and equity-related instruments, while debt mutual funds invest in bonds and papers. There are also hybrid mutual funds that invest in equity as well as debt. Mutual funds are flexible investment vehicles, in which you can begin and stop investing as per your convenience. Apart from tax-saving mutual funds, you can redeem investments from mutual funds any time as well.</string>
    <string name="fixed_deposits">Mutual funds have been around for the past few decades but they have gained popularity only in the last few years. These are investment vehicles that pool the money of many investors and invest it in a way to earn optimum returns. Different types of mutual funds invest in different securities. Equity mutual funds invest primarily in stocks and equity-related instruments, while debt mutual funds invest in bonds and papers. There are also hybrid mutual funds that invest in equity as well as debt. Mutual funds are flexible investment vehicles, in which you can begin and stop investing as per your convenience. Apart from tax-saving mutual funds, you can redeem investments from mutual funds any time as well.</string>
    <string name="recurring_deposits">A recurring deposit (RD) is another fixed tenure investment that allows investors to put in a specific amount every month for a pre-defined period of time. RDs are offered by banks and post offices. The interest rates are defined by the institution offering it. An RD allows the investor to invest a small amount every month to build a corpus over a defined time period. RDs offer capital protection as well as guaranteed returns.</string>
    <string name="ppf">The Public Provident Fund (PPF) is a long-term tax-saving investment vehicle that comes with a lock-in period of 15 years. Investments made in PPF can be used to earn a tax break. The PPF rate is decided by the Government of India every quarter. The corpus withdrawn at the end of the 15-year period is completely tax-free in the hands of the investor. PPF also allows loans and partial withdrawals after certain conditions have been met.</string>
    <string name="epf">The Employee Provident Fund (EPF) is another retirement-oriented investment vehicle that earns a tax break under Section 80C. EPF deductions are typically a part of an earner’s monthly salary and the same amount is matched by the employer as well. Upon maturity, the withdrawn corpus from EPF is also entirely tax-free. EPF rates are also decided by the Government of India every quarter.</string>
    <string name="national_pension">The National Pension System (NPS) is a relatively new tax-saving investment option. Investors in the NPS stay locked-in till retirement and can earn higher returns than PPF or EPF since the NPS offers plan options that invest in equities as well. The maturity corpus from the NPS is not entirely tax-free and a part of it has to be used to purchase an annuity that will give the investor a regular pension.</string>
    <string name="age">Typically, younger investors have fewer responsibilities and a longer time horizon. When you have a long working life in front of you, you can invest in vehicles with a long-term view and also keep increasing your investment amount with an increase in your income. This is why equity-oriented investments like equity mutual funds would be a better option for young investors, as compared to something like fixed deposits. But on the other hand, older investors can opt for safer avenues like FDs.</string>
    <string name="goal">Investment goals can be either short-term or long-term. For a short-term goal, you should opt for a safer investment and use the return-generating potential of equities for long-term goals. Goals can also be negotiable and non-negotiable. For non-negotiable goals like children’s education or down payment for a house, guaranteed-return investments would be a good choice. But if the goal is negotiable, which means that it can be pushed back by a few months, then investing in equity mutual funds or stocks can be beneficial. Plus, if these investments do really well, then you can even meet the goal before time.</string>
    <string name="profile">Another thing to think about when choosing an investment option is your own profile. Factors like how much you are earning and how many financial dependants you have are also critical. A young investor with a lot of time on hand may not be able to take equity-related risks if he also has the responsibility to take care of his family. Similarly, someone older with no dependents and a steady source of income can choose to invest in equities to earn higher returns.\n\n

This is why it is said that when it comes to investments, one size doesn’t fit all. Investments not only have to be chosen carefully but also planned properly to get the most out of them.</string>
    <string name="plan_to_invest">The first step in planning your investments is to figure out the right investment that fits your profile and needs. Here are a few things to keep in mind when planning your investments:\n\n

-Choose investments carefully after doing adequate research\n
-Don’t fall for quick-buck schemes that promise high returns in a short time\n
-Review your stock and mutual fund investments periodically\n
-Consider the tax implications on returns you earn from your investments\n
-Keep things simple and avoid complicated investments that you don’t understand\n\n
In this article, we have learned a lot about investments and the various types of investments. Now, it’s your time to be smart and to generate wealth.</string>
    <string name="where_to_invest">Since there are so many types of investment vehicles, it is normal for an investor to get overwhelmed. Someone new to investing would not where to invest their money. Making the wrong investment choice can lead to financial losses, which is something that no one wants. This is why you should use the following factors to decide where to invest your money.</string>
</resources>