<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ways_to_grow.NeedForInvest">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/cardview_dark_background"
                android:text="Start Investing Today"
                android:textSize="32sp"
                android:gravity="center_horizontal"/>
            <TableRow
                android:id="@+id/hr"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#444"/>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                android:layout_gravity="center_horizontal"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_gravity="center_horizontal"
                    >

                    <view
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/needforinvest_video"
                        class="com.google.android.youtube.player.YouTubePlayerView"
                        android:layout_width="340dp"
                        android:layout_height="200dp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_horizontal"
                android:textColor="@color/cardview_dark_background"
                android:text="Why Investments"
                android:textSize="24sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/why_invest"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_horizontal"
                android:textColor="@color/cardview_dark_background"
                android:text="Types of Investments in India"
               android:textSize="24sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/typesof_invest"
                android:textSize="16sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textColor="@color/cardview_dark_background"
                    android:text="1.Stocks"
                    android:textSize="24sp"
                    android:gravity="left"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stocks"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/cardview_dark_background"
                    android:text="2.Mutual Funds"
                    android:textSize="24sp"
                    android:gravity="left"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mutual"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/cardview_dark_background"
                    android:text="3.Fixed Deposits"
                    android:textSize="24sp"
                    android:gravity="left"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fixed_deposits"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/cardview_dark_background"
                    android:text="4.Recurring Deposits"
                    android:textSize="24sp"
                    android:gravity="left"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recurring_deposits"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/cardview_dark_background"
                    android:text="5.Public Provident Fund"
                    android:textSize="24sp"
                    android:gravity="left"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ppf"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/cardview_dark_background"
                    android:text="6.Employee Provident Fund"
                    android:textSize="24sp"
                    android:gravity="left"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/epf"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/cardview_dark_background"
                    android:text="7.National Pension System"
                    android:textSize="24sp"
                    android:gravity="start"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/national_pension"
                    android:textSize="16sp"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_horizontal"
                android:textColor="@color/cardview_dark_background"
                android:text="Where you should invest money"
                android:textSize="24sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/where_to_invest"
                android:textSize="16sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="20dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textColor="@color/cardview_dark_background"
                    android:text="Age"
                    android:textSize="20sp"
                    android:gravity="start"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/age"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:textColor="@color/cardview_dark_background"
                    android:text="Goal"
                    android:textSize="20sp"
                    android:gravity="start"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/goal"
                    android:layout_margin="10dp"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textColor="@color/cardview_dark_background"
                    android:text="Profile"
                    android:textSize="20sp"
                    android:gravity="start"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/profile"
                    android:textSize="16sp"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="@color/cardview_dark_background"
                    android:text="How should I plan my investments?"
                    android:textSize="24sp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/plan_to_invest"
                    android:textSize="16sp"/>
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>